--- a/src/Compoments/Navbar/Navbar.module.css
+++ b/src/Compoments/Navbar/Navbar.module.css
@@ -5,11 +5,29 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 13px 16px;
+    padding: 13px 0;
     width: 100%;
     max-width: 1136px;
     margin: auto;
     z-index: 100;
+}
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 13px 16px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .header {
+        padding: 13px 24px;
+    }
+}
+
+@media screen and (min-width: 1136px) {
+    .header {
+        padding: 13px 0px;
+    }
 }
 
 .category_nav {
