--- a/src/Compoments/ProductInfo/ProductInfo.module.css
+++ b/src/Compoments/ProductInfo/ProductInfo.module.css
@@ -17,7 +17,7 @@
 .product_img {
     width: 100%;
     height: 320px;
-    border: 2px solid #eee;
+    border: 1px solid #eee;
     object-fit: cover;
 }
 
@@ -31,7 +31,7 @@
 .product_other_img {
     width: 40px;
     height: 40px;
-    border: 2px solid #eee;
+    border: 1px solid #eee;
     object-fit: cover;
     cursor: pointer;
 }
@@ -100,6 +100,7 @@
 
     .product_img {
         height: 42.9vh;
+        /* max-height: 540px !important; */
     }
 
     .product_other_img {
