--- a/src/Compoments/Sidebar/Sidebar.module.css
+++ b/src/Compoments/Sidebar/Sidebar.module.css
@@ -15,20 +15,20 @@
     margin: 16px 16px 0;
 }
 
-.close_btn {
+.close_btn,
+.close_btn span {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 0px;
     font-family: "Nunito",
-    sans-serif;
+        sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 1.5rem;
     line-height: 20px;
     letter-spacing: 0.0025em;
-    gap: 5px;
     color: #000000;
 }
 
@@ -57,7 +57,7 @@
     justify-content: center;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    /* gap: 12px; */
     width: -webkit-fill-available;
     height: calc(100vh - 84px);
     padding: 0 16px;
@@ -93,6 +93,7 @@
     }
 
 }
+
 @media screen and (min-width: 768px) {
 
     .sidebar_container {
